# SimpleWaylandBuffer

./: CMakeLists.txt  LICENSE  README.md
include/: PixelPool.h  SharedMemory.h
src/: PixelPool.cpp  SharedMemory.cpp  main.cpp
